Velcro test First SandBox/src/objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>AcctPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_or_Project_Name__c</fullName>
        <label>Program or Project Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Function__c</fullName>
        <label>Site Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>CORPORATE OFFICE</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sub-Contractor</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Location_Country__c</fullName>
        <label>Site Location Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Location_State_Province__c</fullName>
        <label>Site Location State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <label>Site Location City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Site_Name__c</fullName>
        <label>Strategic Site Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>